--- a/src/index.html
+++ b/src/index.html
@@ -1,36 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Image search</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-      integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <form class="search-form" id="search-form">
-      <input
-        class="search-form__input"
-        type="text"
-        name="searchQuery"
-        autocomplete="off"
-        placeholder="Search images..."
-      />
-      <button class="search-form__button" type="submit">Search</button>
-    </form>
-
-    <div class="container">
-      <div class="gallery"></div>
-      <button type="button" class="load-more is-hidden">Load more</button>
-      <p class="end-collection-text is-hidden">
-        We're sorry, but you've reached the end of search results.
-      </p>
-    </div>
-
-    <script src="./index.js"></script>
-  </body>
-</html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href='./index.css'>
+  <title>Homework 11</title>
+</head>
+<body> 
+  <form class="search-form" id="search-form"> 
+    <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..."> 
+    <button type="submit" name="searchButton">Search</button> 
+  </form> 
+  <div class="gallery"> 
+  </div> 
+  <div class="js-guard">
+  </div> 
+<div class="for_upButton" id="js-scrol-end">
+  <button type="button" class="upButton">On top of the page</button>
+</div> 
+  <script src='./JS/index.js' type="module"></script>
+</body>
+ 
