--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,6 @@
 <div class="for_upButton" id="js-scrol-end">
   <button type="button" class="upButton">On top of the page</button>
 </div> 
-  <script src='./JS/index.js' type="module"></script>
+  <script src='./js/index.js' type="module"></script>
 </body>
  
